# subscription_rep

./: .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
core/: models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/tests/: test_subscription_api.py
identity/: __init__.py  apps.py  serializers.py  urls.py  views.py
identity/migrations/: __init__.py
